# soco-cli

./: .gitignore  CHANGELOG.txt  MANIFEST.in  Makefile  PYPI_README.md  README.md  RELEASING.txt  gh-md-toc  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonos-cli.py  sonos-discover.py  sonos.py  sonos_discover.py  sonos_discovery.py  speaker-discovery.py  speaker-table.py
assets/: soco-cli-logo.afdesign
soco-cli/: sonos_discover.py
soco_cli/: __init__.py  __main__.py  action_processor.py  alarms.py  aliases.py  api.py  check_for_update.py  cmd_parser.py  http_api.py  interactive.py  keystroke_capture.py  m3u_parser.py  match_speaker_names.py  play_local_file.py  play_local_file_lists.py  play_m3u_file.py  rest_api.py  sonos.py  sonos_discover.py  speaker_info.py  speakers.py  track_follow.py  utils.py  wait_actions.py
tests/: test_action_processor.py  test_aliases.py  test_check_for_update.py  test_cli.py  test_cmd_parser.py  test_comprehensive.py  test_http_api.py  test_interactive.py  test_m3u_parser.py  test_match_speaker_names.py  test_play_local_file.py  test_speakers.py  test_utils.py  test_utils_extended.py  test_wait_actions.py
